--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,10 @@ android:layout_width="match_parent"
 android:layout_height="match_parent"
 tools:context=".MainActivity">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
     <GridView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/gridview"
         android:layout_width="match_parent"
@@ -18,5 +22,23 @@ tools:context=".MainActivity">
         android:stretchMode="columnWidth"
         android:gravity="center"
         />
+
+    </RelativeLayout>
+
+    //https://stackoverflow.com/questions/27484126/adjust-icon-size-of-floating-action-button-fab
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/weekend"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
+        android:scaleType="fitXY"
+        app:fabCustomSize="110dp"
+        app:maxImageSize="90dp"
+        android:elevation="8dp"
+        android:backgroundTint="@color/colorPrimaryDark"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_margin="0dp"
+        app:srcCompat="@drawable/findeicon1"/>
 
 </RelativeLayout>
